--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <li><a href="./index.html" id="home">Home </a></li>
   <li><a href="./about_us.html" id="contact">About Us </a></li>
   <li><a href="./contact.html" id="contact">Contact Us </a></li>
-  <li><input type="text" id="conditionInput" placeholder="Enter a destination keyword">  </li>
+  <li><input type="text" id="searchInput" placeholder="Enter a destination keyword">  </li>
   <li><button id='btnSearch'>Search</button>
   <li><button id='btnClear'>Clear</button>
   </li>
@@ -26,6 +26,10 @@
             </p>
         </div>
     </div>
+
+    <div class="searchCondition">
+      <div id="result"></div>
+     </div>
 
 <script src="./travel_recommendation.js"></script>
 </body>
