--- a/about_us.html
+++ b/about_us.html
@@ -43,6 +43,28 @@
         </div>
     </div>
 
+    <div class="container">
+        <div class="container_about">
+            <h1>Company History </h1>
+            <p>in 1999 WE Started as a traveling business consulting empire 
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum </p>
+        </div>
+    </div>
+    <div class="container">
+        <div class="container_about">
+            <h1>Our Offices</h1>
+            <div class="row">
+                <div class="employee">
+                    <img src="/images/bora.jpg">
+                </div>
+                <div class="employee">
+                    <img src="/images/sydney.jpg">
+                </div>
+            </div>
+        </div>
+    </div>
+
 <script src="./travel_recommendation.js"></script>
 </body>
 </html>
