--- a/about_us.html
+++ b/about_us.html
@@ -56,10 +56,10 @@
             <h1>Our Offices</h1>
             <div class="row">
                 <div class="employee">
-                    <img src="/images/bora.jpg">
+                    <img src="bora.jpg">
                 </div>
                 <div class="employee">
-                    <img src="/images/sydney.jpg">
+                    <img src="sydney.jpg">
                 </div>
             </div>
         </div>
